--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Year in a backpack
 email: yearinabackpack@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A blog of year round travel adventure around South America and Asia.
-baseurl: "http://www.yearinabackpack.com" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://www.yearinabackpack.com" # the base hostname & protocol for your site
 twitter_username: yearinabackpack
 github_username:  yearinabackpack
 
