--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Year in a backpack
 email: yearinabackpack@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  A blog of year round travel adventure around South America and Asia.
+  Blog about backpacking adventure around America and Asia.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.yearinabackpack.com" # the base hostname & protocol for your site
 twitter_username: yearinabackpack
@@ -27,6 +27,7 @@ markdown: kramdown
 theme: minima
 
 include: ["_pages"]
+exclude: ["working_files"]
 
 defaults:
   -
