--- a/_config.yml
+++ b/_config.yml
@@ -36,3 +36,7 @@ defaults:
       type: "" # a collection in your site, in plural form
     values:
       layout: "default"
+   -
+    scope:
+      type: "posts"
+      permalink: /journal/:title
