--- a/_config.yml
+++ b/_config.yml
@@ -38,3 +38,12 @@ defaults:
       type: "" # a collection in your site, in plural form
     values:
       layout: "default"
+      
+authors:
+  simon:
+    name: Simon Tomanik
+    avatar: simon-photo.jpg
+
+  kuba:
+    name: Jakub Velfl
+    avatar: kuba-photo.jpg
