--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Year in a backpack
 email: yearinabackpack@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Blog about backpacking adventure around America and Asia.
+description: Blog about backpacking adventure around America and Asia.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.yearinabackpack.com" # the base hostname & protocol for your site
 twitter_username: yearinabackpack
