--- a/_config.yml
+++ b/_config.yml
@@ -39,10 +39,19 @@ defaults:
       layout: "default"
       
 authors:
-  simon:
-    name: Simon Tomanik
-    avatar: simon-photo.jpg
-
   kuba:
     name: Jakub Velfl
-    avatar: kuba-photo.jpg
+    display_name: Kuba
+    gravatar: 
+    email: 
+    web: 
+    twitter: 
+    github: 
+  simon:
+    name: Šimon Tomanik
+    display_name: Šimon
+    gravatar: 
+    email:
+    web:
+    twitter: 
+    github: 
