Mr Hyde was here …

--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,9 @@ authors:
     web: 
     twitter: 
     github: 
+
   simon:
-    name: Šimon Tomanik
+    name: Šimon Tomaník
     display_name: Šimon
     gravatar: 
     email:
