--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,10 @@ theme: minima
 
 
 include: ["_pages"]
-exclude: ["working_files", "_drafts"]
+exclude: 
+  - working_files 
+  - _drafts"
+
 permalink: /journal/:title
 
 defaults:
